# zipr

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: rust.yml
oem-437/: Cargo.toml
oem-437/src/: lib.rs  symbolmap.rs  symbols.rs
src/: central_directory.rs  constants.rs  eocd.rs  lib.rs
src/data/: mod.rs
src/data/extra_field/: mod.rs
src/domain/: central_directory_entry.rs  extra_field.rs  local_file.rs  mod.rs  zip_functions.rs
src/parsers/: central_directory.rs  compression_method.rs  end_of_central_directory.rs  eocd.rs  extra_field.rs  file_data.rs  local_file.rs  mod.rs  ntfs.rs  path.rs
zipr/: Cargo.toml  README.md
zipr-cli/: Cargo.toml  README.md
zipr-cli/src/: display.rs  error.rs  list.rs  main.rs  procedural.rs  sequence.rs  unzip.rs  zipr.rs
zipr-cli/src/args/: mod.rs  unzip.rs  zip.rs  zipr.rs
zipr-cli/src/commands/: add_files.rs  extract_files.rs  inspect.rs  list_files.rs  mod.rs  show_comment.rs
zipr-compression/: Cargo.toml  README.md
zipr-compression/src/: compress.rs  decompress.rs  lib.rs
zipr-cookie/: Cargo.toml  README.md
zipr-cookie/src/: iter_bytes.rs  layout.rs  lib.rs
zipr-cookie/src/data/: ascii_char.rs  central_directory.rs  compression_method.rs  cp437str.rs  end_of_central_directory.rs  extra_field.rs  local_file.rs  mod.rs  version.rs  zip_path.rs
zipr-core/: Cargo.toml
zipr-core/src/: constants.rs  domain.rs  lib.rs
zipr-core/src/data/: compressed_data.rs  dos_date.rs  dos_time.rs  mod.rs  zip_entry.rs  zip_path.rs
zipr-core/src/data/extra_field/: mod.rs  ntfs.rs  wintimestamp.rs
zipr-core/src/data/file/: compressed_data.rs  mod.rs
zipr-core/src/domain/: central_directory_entry.rs  extra_field.rs  local_file.rs  mod.rs  zip_functions.rs
zipr-data/: Cargo.toml  README.md
zipr-data/src/: compression_method.rs  constants.rs  cp437.rs  dos_date.rs  dos_time.rs  lib.rs  version.rs  wintimestamp.rs
zipr-data/src/borrowed/: mod.rs  zip_entry.rs  zip_path.rs
zipr-data/src/borrowed/extra_field/: mod.rs  ntfs.rs  wintimestamp.rs
zipr-data/src/borrowed/file/: compressed_data.rs  mod.rs
zipr-data/src/util/: mod.rs
zipr-domain/: Cargo.toml  README.md
zipr-domain/src/: lib.rs  zip_entry.rs
zipr-nom/: Cargo.toml  README.md
zipr-nom/src/: lib.rs
zipr-nom/src/compression/: deflate.rs  mod.rs  store.rs
zipr-nom/src/data/: ascii_char.rs  central_directory.rs  compression_method.rs  cp437_char.rs  end_of_central_directory.rs  extra_field.rs  file_data.rs  local_file.rs  mod.rs  ntfs.rs  version.rs  zip_path.rs
zipr-nom/src/iter/: central_directory.rs  mod.rs  zip_entries.rs
zipr-nom/src/search/: find_central_directory_entries.rs  find_end_of_central_directory.rs  find_local_file_entries.rs  mod.rs  zip_entries.rs
zipr-parsers/: Cargo.toml
zipr-parsers/src/: central_directory.rs  end_of_central_directory.rs  extra_field.rs  lib.rs  local_file.rs  ntfs.rs
zipr-std/: Cargo.toml  README.md
zipr-std/src/: lib.rs
zipr/src/: lib.rs
