[package]
name = "zipr-cli"
version = "0.1.0"
authors = ["beau trepp <beautrepp@gmail.com>"]
edition = "2018"

[[bin]]
name = "zipr"
path = "src/main.rs"
doc = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zipr = {path="../zipr"}
structopt = { version = "0.3" }
nom = {version = "6.0.1" }
comfy-table = "4.0.1"
cookie-factory = {version = "0.3.1",git="https://github.com/rust-bakery/cookie-factory.git"}