[package]
name = "zipr-compression"
version = "0.1.0"
authors = ["beau trepp <beautrepp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniz_oxide = { version = "0.4.3"}
zipr-core = {path="../zipr-core"}