[package]
name = "zipr-cookie"
version = "0.1.0"
authors = ["beau trepp <beautrepp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zipr-core = {path="../zipr-core"}
ascii = {version="1.0.0", default-features = false}
cookie-factory = {version = "0.3.1", default-features=false,git="https://github.com/rust-bakery/cookie-factory.git"}