[package]
name = "zipr-nom"
version = "0.1.0"
authors = ["beau trepp <beautrepp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniz_oxide = { version = "0.4.3"}
nom = { version = "6.0.1", default-features = false }
zipr-core = {path="../zipr-core"}
ascii = {version="1.0.0", default-features = false}