[package]
name = "zipr-nom"
version = "0.1.0"
authors = ["beau trepp <beautrepp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.0.1", default-features = false }
zipr-data = {path="../zipr-data"}
zipr-domain = {path="../zipr-domain"}
ascii = {version="1.0.0", default-features = false}