[package]
name = "zipr"
version = "0.1.0"
authors = ["beau trepp <beautrepp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zipr-data = {path="../zipr-data"}
zipr-nom = {path="../zipr-nom"}
zipr-std = {path="../zipr-std"}
zipr-compression = {path="../zipr-compression"}
zipr-cookie = {path="../zipr-cookie"}